testsuite/tests/typecheck/should_fail/T6022.stderr

T6022.hs:3:9: error:
    No instance for (Eq ([a] -> a))
      (maybe you haven't applied a function to enough arguments?)
      arising from a use of ‘==’
    In the expression: x == head
    In an equation for ‘f’: f x = x == head
